# AwA-OS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
packaging/arch/awaos-pe-loader/: PKGBUILD
packaging/arch/binfmt/: pe.conf
tests/win32-cmdlite/: cmdlite.c
tests/win32-hello/: hello.c
tests/win32-tls-demo/: tls_demo.c
winss/include/nt/: hook.h  hooks.h  ntdef.h  teb.h
winss/include/win/: minwin.h
winss/loader/: CMakeLists.txt  hooks_table.c  pe32_spawn_bridge.c  pe_loader32.c  pe_spawn_bridge.c  pe_spawn_shim.c
winss/ntdll32/: error.c  ntsim_api.h  teb.c  teb_init.c  teb_tls.h  thread.c  thread.h  tls.c
winss/ntshim32/: CMakeLists.txt  ntshim32.c  ntshim_api.h
